--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
+    "@nestjs/typeorm": "^8.0.2",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
